[B]Version 1.1.80[/B]
Fixed search keyword with custom lists
PornCaper - new site
Hitprn - new site
Pornmz - new site